// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TagsDialog dialog component tests > should disable tag selection when no options available 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 {
  margin-left: -5px;
}

.c15>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c15>* {
  margin-left: 5px;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c24 {
  cursor: pointer;
  width: 16px;
  height: 16px;
  line-height: 16px;
}

.c24 * {
  height: inherit;
  width: inherit;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 10% auto;
  border: 0;
  outline: 0;
  width: 650px;
  height: px;
}

.c0 {
  position: fixed;
  font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
  font-size: 1.1em;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 0;
  background: rgba(102, 102, 102, 0.5);
  z-index: 600;
  -webkit-transition: opacity 1s ease-in;
  transition: opacity 1s ease-in;
  width: 100%;
  height: 100%;
}

.c32 {
  width: 0;
  height: 0;
  cursor: nwse-resize;
  border-right: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-top: 20px solid #fff;
}

.c31 {
  position: absolute;
  bottom: 3px;
  right: 3px;
  width: 20px;
  height: 20px;
  background: repeating-linear-gradient(     -45deg,     transparent,     transparent 2px,     #000 2px,     #000 3px   );
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: inherit;
  padding: 0;
  background: #fff;
  box-shadow: 5px 5px 10px #7F7F7F;
  border-radius: 3px;
  border: 1px solid #7F7F7F;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  font-size: 12px;
  font-family: Verdana,sans-serif;
  color: #074320;
  cursor: pointer;
  border-radius: 2px;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  line-height: 24px;
}

.c5 :hover {
  border: 1px solid #074320;
}

.c5 * {
  height: inherit;
  width: inherit;
}

.c28 {
  display: inline-block;
  padding: 0 15px;
  color: #4C4C4C;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #bfbfbf;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c28:focus,
.c28:hover {
  border: 1px solid #4C4C4C;
}

.c28:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #11ab51;
  font-weight: bold;
  color: #fff;
}

.c28[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c28 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c28:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4C4C4C;
}

.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c30 {
  border: 1px solid #7F7F7F;
  color: #fff;
  background: #11ab51;
}

.c30 :hover {
  color: #074320;
  background: #A1DDBA;
}

.c26 {
  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: #e5e5e5;
  margin-top: 15px;
  padding: 10px 20px 10px 20px;
}

.c27 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.c4 {
  padding: 5px 5px 5px 10px;
  margin-bottom: 15px;
  border-radius: 2px 2px 0 0;
  border-bottom: 1px solid #7F7F7F;
  color: #fff;
  font-weight: bold;
  background: #11ab51;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: -webkit-grab;
  cursor: grab;
}

.c8 {
  overflow: auto;
  padding: 0 15px;
  width: 100%;
  height: 100%;
  max-height: 400px;
}

.c7 {
  overflow: hidden;
  height: 100%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  padding-bottom: 10px;
}

.c11 {
  display: inline-block;
  max-width: 100%;
  font-weight: bold;
  text-align: right;
  padding-left: 10px;
  padding-right: 10px;
  width: 33.33333333%;
  margin-left: 0;
}

.c13 {
  width: 66.66666667%;
  padding-left: 10px;
  padding-right: 10px;
}

.c22 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
  margin: 1px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  line-height: 16px;
  cursor: pointer;
}

.c22 * {
  height: inherit;
  width: inherit;
}

.c18 {
  border: 1px solid #bfbfbf;
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 1px 5px;
  background-color: #fff;
  color: #000;
  font-weight: normal;
  background-color: #f3f3f3;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 230px;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  word-break: keep-all;
  white-space: nowrap;
  overflow: hidden;
  cursor: default;
}

.c23 {
  color: #c12c30;
  font-weight: bold;
  font-size: 19px;
  padding-bottom: 1px;
  padding-left: 4px;
  display: none;
}

.c20 {
  cursor: default;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media print {
  .c24 {
    display: none;
  }
}

<body>
  <div
    id="portals"
  >
    <div>
      <div
        class="c0"
      >
        <div
          class="c1"
          height="px"
          role="dialog"
          tabindex="1"
          width="650px"
        >
          <div
            class="c2"
          >
            <div
              class="c3 c4"
              data-testid="dialog-title-bar"
            >
              <span>
                Add Tag
              </span>
              <div
                class="c5"
                data-testid="dialog-title-close-button"
                title="Close"
              >
                ×
              </div>
            </div>
            <div
              class="c6 c7"
            >
              <div
                class="c8"
                data-testid="save-dialog-content"
              >
                <div
                  class="c9"
                >
                  <div
                    class="c10"
                  >
                    <label
                      class="c11"
                      data-testid="formgroup-title"
                    >
                      Choose Tag
                    </label>
                    <div
                      class="c12 c13"
                      data-testid="formgroup-content"
                    >
                      <div
                        class="c12 c14"
                      >
                        <div
                          class="c12 c15"
                        >
                          <div
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="downshift-1-label"
                            class="c16"
                            role="combobox"
                          >
                            <div
                              class="c17"
                              width="230px"
                            >
                              <div
                                aria-haspopup="true"
                                aria-label="open menu"
                                class="c18"
                                data-toggle="true"
                                disabled=""
                                role="button"
                                type="button"
                              >
                                <div
                                  class="c19 c20"
                                  data-testid="select-selected-value"
                                  disabled=""
                                />
                                <div
                                  class="c21"
                                >
                                  <span
                                    class="c22"
                                    data-testid="select-open-button"
                                  >
                                    ▼
                                  </span>
                                </div>
                              </div>
                            </div>
                            <div
                              class="c23"
                              data-testid="error-marker"
                            >
                              ×
                            </div>
                          </div>
                          <span
                            class="c24"
                            data-testid="svg-icon"
                            title="Create a new Tag"
                          >
                            <svg
                              height="1em"
                              title="Create a new Tag"
                              viewBox="0 0 67.733 67.733"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                transform="translate(0 -229.27)"
                              >
                                <path
                                  class="gui_icon_class"
                                  d="m183.7-0.048828-16.785 52.102-54.736-0.10156 44.363 32.062-17.01 52.025 44.201-32.285 44.223 32.256-17.045-52.016 44.342-32.09-54.736 0.13672-16.816-52.09zm-183.7 16.049v240h192l-0.00391-112h-16.004l0.00196 96.004h-160v-208.01l112 0.003906v-15.996l-128-0.003906z"
                                  transform="matrix(.26458 0 0 .26458 0 229.27)"
                                />
                              </g>
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="c10"
                  >
                    <label
                      class="c11"
                      data-testid="formgroup-title"
                    >
                      Value
                    </label>
                    <div
                      class="c12 c13"
                      data-testid="formgroup-content"
                    />
                  </div>
                  <div
                    class="c10"
                  >
                    <label
                      class="c11"
                      data-testid="formgroup-title"
                    >
                      Comment
                    </label>
                    <div
                      class="c12 c13"
                      data-testid="formgroup-content"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c25 c26 c27"
            >
              <button
                class="c28 c29 c30"
                data-testid="dialog-close-button"
                title="Cancel"
              >
                Cancel
              </button>
              <button
                class="c28 c29 c30"
                data-testid="dialog-save-button"
                title="Add Tag"
              >
                Add Tag
              </button>
            </div>
          </div>
          <div
            class="c31"
          >
            <div
              class="c32"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;

exports[`TagsDialog dialog component tests > should render dialog 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 {
  margin-left: -5px;
}

.c15>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c15>* {
  margin-left: 5px;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c24 {
  cursor: pointer;
  width: 16px;
  height: 16px;
  line-height: 16px;
}

.c24 * {
  height: inherit;
  width: inherit;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 10% auto;
  border: 0;
  outline: 0;
  width: 650px;
  height: px;
}

.c0 {
  position: fixed;
  font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
  font-size: 1.1em;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 0;
  background: rgba(102, 102, 102, 0.5);
  z-index: 600;
  -webkit-transition: opacity 1s ease-in;
  transition: opacity 1s ease-in;
  width: 100%;
  height: 100%;
}

.c32 {
  width: 0;
  height: 0;
  cursor: nwse-resize;
  border-right: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-top: 20px solid #fff;
}

.c31 {
  position: absolute;
  bottom: 3px;
  right: 3px;
  width: 20px;
  height: 20px;
  background: repeating-linear-gradient(     -45deg,     transparent,     transparent 2px,     #000 2px,     #000 3px   );
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: inherit;
  padding: 0;
  background: #fff;
  box-shadow: 5px 5px 10px #7F7F7F;
  border-radius: 3px;
  border: 1px solid #7F7F7F;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  font-size: 12px;
  font-family: Verdana,sans-serif;
  color: #074320;
  cursor: pointer;
  border-radius: 2px;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  line-height: 24px;
}

.c5 :hover {
  border: 1px solid #074320;
}

.c5 * {
  height: inherit;
  width: inherit;
}

.c28 {
  display: inline-block;
  padding: 0 15px;
  color: #4C4C4C;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #bfbfbf;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c28:focus,
.c28:hover {
  border: 1px solid #4C4C4C;
}

.c28:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #11ab51;
  font-weight: bold;
  color: #fff;
}

.c28[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c28 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c28:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4C4C4C;
}

.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c30 {
  border: 1px solid #7F7F7F;
  color: #fff;
  background: #11ab51;
}

.c30 :hover {
  color: #074320;
  background: #A1DDBA;
}

.c26 {
  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: #e5e5e5;
  margin-top: 15px;
  padding: 10px 20px 10px 20px;
}

.c27 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.c4 {
  padding: 5px 5px 5px 10px;
  margin-bottom: 15px;
  border-radius: 2px 2px 0 0;
  border-bottom: 1px solid #7F7F7F;
  color: #fff;
  font-weight: bold;
  background: #11ab51;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: -webkit-grab;
  cursor: grab;
}

.c8 {
  overflow: auto;
  padding: 0 15px;
  width: 100%;
  height: 100%;
  max-height: 400px;
}

.c7 {
  overflow: hidden;
  height: 100%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  padding-bottom: 10px;
}

.c11 {
  display: inline-block;
  max-width: 100%;
  font-weight: bold;
  text-align: right;
  padding-left: 10px;
  padding-right: 10px;
  width: 33.33333333%;
  margin-left: 0;
}

.c13 {
  width: 66.66666667%;
  padding-left: 10px;
  padding-right: 10px;
}

.c22 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
  margin: 1px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  line-height: 16px;
  cursor: pointer;
}

.c22 * {
  height: inherit;
  width: inherit;
}

.c18 {
  border: 1px solid #bfbfbf;
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 1px 5px;
  background-color: #fff;
  color: #000;
  font-weight: normal;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 230px;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  word-break: keep-all;
  white-space: nowrap;
  overflow: hidden;
  cursor: pointer;
}

.c23 {
  color: #c12c30;
  font-weight: bold;
  font-size: 19px;
  padding-bottom: 1px;
  padding-left: 4px;
  display: none;
}

.c20 {
  cursor: default;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media print {
  .c24 {
    display: none;
  }
}

<body>
  <div
    id="portals"
  >
    <div>
      <div
        class="c0"
      >
        <div
          class="c1"
          height="px"
          role="dialog"
          tabindex="1"
          width="650px"
        >
          <div
            class="c2"
          >
            <div
              class="c3 c4"
              data-testid="dialog-title-bar"
            >
              <span>
                Add Tag
              </span>
              <div
                class="c5"
                data-testid="dialog-title-close-button"
                title="Close"
              >
                ×
              </div>
            </div>
            <div
              class="c6 c7"
            >
              <div
                class="c8"
                data-testid="save-dialog-content"
              >
                <div
                  class="c9"
                >
                  <div
                    class="c10"
                  >
                    <label
                      class="c11"
                      data-testid="formgroup-title"
                    >
                      Choose Tag
                    </label>
                    <div
                      class="c12 c13"
                      data-testid="formgroup-content"
                    >
                      <div
                        class="c12 c14"
                      >
                        <div
                          class="c12 c15"
                        >
                          <div
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="downshift-0-label"
                            class="c16"
                            role="combobox"
                          >
                            <div
                              class="c17"
                              width="230px"
                            >
                              <div
                                aria-haspopup="true"
                                aria-label="open menu"
                                class="c18"
                                data-toggle="true"
                                role="button"
                                type="button"
                              >
                                <div
                                  class="c19 c20"
                                  data-testid="select-selected-value"
                                />
                                <div
                                  class="c21"
                                >
                                  <span
                                    class="c22"
                                    data-testid="select-open-button"
                                  >
                                    ▼
                                  </span>
                                </div>
                              </div>
                            </div>
                            <div
                              class="c23"
                              data-testid="error-marker"
                            >
                              ×
                            </div>
                          </div>
                          <span
                            class="c24"
                            data-testid="svg-icon"
                            title="Create a new Tag"
                          >
                            <svg
                              height="1em"
                              title="Create a new Tag"
                              viewBox="0 0 67.733 67.733"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                transform="translate(0 -229.27)"
                              >
                                <path
                                  class="gui_icon_class"
                                  d="m183.7-0.048828-16.785 52.102-54.736-0.10156 44.363 32.062-17.01 52.025 44.201-32.285 44.223 32.256-17.045-52.016 44.342-32.09-54.736 0.13672-16.816-52.09zm-183.7 16.049v240h192l-0.00391-112h-16.004l0.00196 96.004h-160v-208.01l112 0.003906v-15.996l-128-0.003906z"
                                  transform="matrix(.26458 0 0 .26458 0 229.27)"
                                />
                              </g>
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="c10"
                  >
                    <label
                      class="c11"
                      data-testid="formgroup-title"
                    >
                      Value
                    </label>
                    <div
                      class="c12 c13"
                      data-testid="formgroup-content"
                    />
                  </div>
                  <div
                    class="c10"
                  >
                    <label
                      class="c11"
                      data-testid="formgroup-title"
                    >
                      Comment
                    </label>
                    <div
                      class="c12 c13"
                      data-testid="formgroup-content"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c25 c26 c27"
            >
              <button
                class="c28 c29 c30"
                data-testid="dialog-close-button"
                title="Cancel"
              >
                Cancel
              </button>
              <button
                class="c28 c29 c30"
                data-testid="dialog-save-button"
                title="Add Tag"
              >
                Add Tag
              </button>
            </div>
          </div>
          <div
            class="c31"
          >
            <div
              class="c32"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;
